[package]
name = "position-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
service-sdk = { git = "https://github.com/MyJetTools/service-sdk", tag = "0.2.5", features = [
    "macros",
    "grpc",
    "my-service-bus",
] }

trading-sdk = { git = "https://github.com/my-cfd-platform/trading-sdk", tag = "0.1.22" }
cfd-engine-sb-contracts = { tag = "0.2.15", git = "https://github.com/my-cfd-platform/cfd-engine-sb-contracts.git" }

trade-log = { git = "https://github.com/MyJetTools/trade-log.git", tag = "0.1.7" }


chrono = "*"
tokio = { version = "*", features = ["full"] }
async-trait = "*"
tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
prost = "*"
prost-types = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
uuid = { version = "*", features = ["v4"] }
stopwatch = "*"

[build-dependencies]
ci-utils = { git = "https://github.com/MyJetTools/ci-utils.git", tag = "0.1.0" }
